--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'scala'
     id 'com.github.lkishalmi.gatling' version '3.0.2'
     id "org.owasp.dependencycheck" version "5.2.1"
 }
@@ -8,9 +9,6 @@ apply plugin: 'com.github.lkishalmi.gatling'
 
 group 'uk.gov.hmcts.reform'
 version = '1.0'
-
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
 
 jar {
     manifest {
